--- a/secondarypage.html
+++ b/secondarypage.html
@@ -8,15 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/secondarypage.css">
-    <title>INSERT TITLE HERE</title>
+    <title>Ask Eros Results</title>
 </head>
 
 <body>
     <header id="header">
         <h1>INSERT HEADER HERE</h1>
+    </header>
+    <div class="hero">
+        
+    </div>
+<div class="container">
+
+</div>
+
 
         <footer>
-            <p>FOOTER HERE</p>
+            <p>You've reached the end of your journey</p>
         </footer>
 
 
