--- a/secondarypage.html
+++ b/secondarypage.html
@@ -13,11 +13,24 @@
 
 <body>
     <header id="header">
-        <h1>INSERT HEADER HERE</h1>
+        <!-- <h1>Tampa</h1> -->
     </header>
-    <div class="hero">
-        
+    <div class="p-3 text-center bg-image rounded-3 align-items-center justify-content-center" style="
+    background-image: url('./assets/William-penn-city-hall-skyline-sunset-Elevated-Angles-for-VP-2200x1237px.jpg');
+    background-size: cover;
+    background-position: 100%;
+    height: 400px;
+  ">
+  <div class="mask">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="text-white">
+        <h1 class="mb-3">Tampa</h1>
+        <h4 class="mb-3">A beautiful city in central Florida located minutes from the beach</h4>
+        <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
+      </div>
     </div>
+  </div>
+</div>
 <div class="container">
 
 </div>
