--- a/secondarypage.html
+++ b/secondarypage.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/secondarypage.css">
-    <title>Ask Eros Results</title>
-</head>
-
-<body>
-    <header id="header">
-        <!-- <h1>Tampa</h1> -->
-    </header>
-    <div class="p-3 text-center bg-image rounded-3 align-items-center justify-content-center" style="
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        >
+        <link rel="stylesheet" href="./assets/css/secondarypage.css">
+        <title>Ask Eros Results</title>
+    </head>
+    <body>
+        <!-- Joe's work with adding a nav bar -->
+        <header id="header">
+            <!-- <h1>Tampa</h1> --></header>
+        <!-- Joe's work complete -->
+        <div class="p-3 text-center bg-image rounded-3 align-items-center justify-content-center" style="
     background-image: url('./assets/William-penn-city-hall-skyline-sunset-Elevated-Angles-for-VP-2200x1237px.jpg');
     background-size: cover;
     background-position: 100%;
     height: 400px;
   ">
-  <div class="mask">
-    <div class="d-flex justify-content-center align-items-center h-100">
-      <div class="text-white">
-        <h1 class="mb-3">Tampa</h1>
-        <h4 class="mb-3">A beautiful city in central Florida located minutes from the beach</h4>
-        <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container">
-
-</div>
-
-
+            <div class="mask">
+                <div class="d-flex justify-content-center align-items-center h-100">
+                    <div class="text-white">
+                        <h1 class="mb-3">Tampa</h1>
+                        <h4 class="mb-3">A beautiful city in central Florida located minutes from the beach</h4>
+                        <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container"></div>
         <footer>
             <p>You've reached the end of your journey</p>
         </footer>
-
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="./assets/JavaScript/secondarypage.js"></script>
-
-</body>
-
+    </body>
 </html>
