--- a/secondarypage.html
+++ b/secondarypage.html
@@ -18,7 +18,7 @@
         <header id="header">
             <!-- <h1>Tampa</h1> --></header>
         <!-- Joe's work complete -->
-        <div class="p-3 text-center bg-image rounded-3 align-items-center justify-content-center" style="
+        <div class="p-3 m-5 text-center bg-image align-items-center justify-content-center" style="
     background-image: url('./assets/William-penn-city-hall-skyline-sunset-Elevated-Angles-for-VP-2200x1237px.jpg');
     background-size: cover;
     background-position: 100%;
@@ -27,17 +27,29 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3">Tampa</h1>
-                        <h4 class="mb-3">A beautiful city in central Florida located minutes from the beach</h4>
+                        <h1 class="mb-3 mt-5">Tampa</h1>
+                        <h4 class="mb-3 mt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container"></div>
-        <footer>
+        <div class="container-lg">
+            <div class="row">
+                <div class="col m-3 p-3 bg-danger rounded">
+                    <h1>Restaurants</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                </div>
+                <div class="col m-3 p-3 bg-success rounded">
+                    <h1>Attractions</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- <footer>
             <p>You've reached the end of your journey</p>
-        </footer>
+        </footer> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="./assets/JavaScript/secondarypage.js"></script>
     </body>
