--- a/secondarypage.html
+++ b/secondarypage.html
@@ -36,12 +36,12 @@
         </div>
         <div class="container-lg">
             <div class="row">
-                <div class="col m-3 p-3 bg-danger rounded">
-                    <h1>Restaurants</h1>
+                <div class="col m-3 p-3 bg-danger rounded text-center">
+                    <h1 class="text-decoration-underline">Restaurants</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                 </div>
-                <div class="col m-3 p-3 bg-success rounded">
-                    <h1>Attractions</h1>
+                <div class="col m-3 p-3 bg-success rounded text-center">
+                    <h1 class="text-decoration-underline">Attractions</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                 </div>
             </div>
