--- a/secondarypage.html
+++ b/secondarypage.html
@@ -37,12 +37,14 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 bg-danger rounded text-center">
-                    <h1 class="text-decoration-underline">Restaurants</h1>
+                    <h1 class="text-decoration-underline">Restaurant</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 bg-success rounded text-center">
-                    <h1 class="text-decoration-underline">Attractions</h1>
+                    <h1 class="text-decoration-underline">Attraction</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <button class="btn-lg">Try again</button>
                 </div>
             </div>
 
