Added a Sticky top navbar that I would like to eventually make transparent

--- a/secondarypage.html
+++ b/secondarypage.html
@@ -15,8 +15,28 @@
     </head>
     <body>
         <!-- Joe's work with adding a nav bar -->
+        <!-- I want to figure out how to make the nav bar transparent -->
         <header id="header">
-            <!-- <h1>Tampa</h1> --></header>
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Journeys-End Logo</a>
+                    <!-- Links -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Toggle</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- We could insert a logo image if we want or just use the name the name coudld be clickable for the home page if we don't want any links -->
+        <a href="#" class="navbar-brand mb-0 h1"></a>
         <!-- Joe's work complete -->
         <div class="p-3 text-center bg-image rounded-3 align-items-center justify-content-center" style="
     background-image: url('./assets/William-penn-city-hall-skyline-sunset-Elevated-Angles-for-VP-2200x1237px.jpg');
