--- a/secondarypage.html
+++ b/secondarypage.html
@@ -19,7 +19,7 @@
             <!-- <h1>Tampa</h1> --></header>
         <!-- Joe's work complete -->
         <div class="p-3 m-5 text-center bg-image align-items-center justify-content-center" style="
-    background-image: url('./assets/William-penn-city-hall-skyline-sunset-Elevated-Angles-for-VP-2200x1237px.jpg');
+    background-image: url('./assets/pleasework.jpg');
     background-size: cover;
     background-position: 100%;
     height: 400px;
@@ -38,12 +38,16 @@
             <div class="row">
                 <div class="col m-3 p-3 bg-danger rounded text-center">
                     <h1 class="text-decoration-underline">Restaurant</h1>
+                    <img src="./assets/restfiller.webp" height="200px" width="200px">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 bg-success rounded text-center">
                     <h1 class="text-decoration-underline">Attraction</h1>
+                    <img src="./assets/attrfiller.jpeg" height="200px" width="200px">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
                 </div>
             </div>
