add imgs to image file, added header info, added css styling
added placeholder images to file
added header info to .html
added google font link to html
added css styling for header

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 </head>
 
 <body>
-  <header id="header">
-    <h1>INSERT HEADER HERE</h1>
-
-    <footer>
-      <p>FOOTER HERE</p>
-    </footer>
+<!-- Header Design -->
+  <header>
+    <nav>
+      <a href="">Philadelphia</a>
+      <a href="">Tampa</a>
+      <a href="">Miami</a>
+      <a href="">Pittsburgh</a>
+      <a href="">Atlanta</a>
+    </nav>
+  </header>
+  
 
 
 
