--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@
       <a href="">Atlanta</a>
     </nav>
   </header>
+
+  <!-- Image slider -->
+  <div class="slider"> 
+    <!-- images list -->
+    <div class="list">
+      <div class="item">
+        <img src="./assets/images/cityimages/image1.jpg">
+        <div class="content">
+          <div class="state">Pennsylvania</div>
+          <div class="city">Philadelphia</div>
+          <div class="nickname">Brotherly Love</div>
+          <div class="des">
+              Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
+          </div>
+          <div class="buttons">
+            <button>Placeholder</button>
+            <button>Placeholder</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   
 
 
