.html - changed buttons .css added styling to buttons
added button styling to css sheet for Day and Night - which will become image triggers to swap photos

added styling to left and right buttons

added color change for city nicknames

added city and nickname styling

** edit note: may flip day and night color combinations once placeholder images replaced with actual images - need to see color flow better

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
           </div>
           <div class="buttons">
-            <button>Placeholder</button>
-            <button>Placeholder</button>
+            <button>Day</button>
+            <button>Night</button>
           </div>
         </div>
       </div>
@@ -53,8 +53,8 @@
               Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
           </div>
           <div class="buttons">
-            <button>Placeholder</button>
-            <button>Placeholder</button>
+            <button>Day</button>
+            <button>Night</button>
           </div>
         </div>
       </div>
@@ -68,8 +68,8 @@
               Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
           </div>
           <div class="buttons">
-            <button>Placeholder</button>
-            <button>Placeholder</button>
+            <button>Day</button>
+            <button>Night</button>
           </div>
         </div>
       </div>
@@ -83,8 +83,8 @@
               Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
           </div>
           <div class="buttons">
-            <button>Placeholder</button>
-            <button>Placeholder</button>
+            <button>Day</button>
+            <button>Night</button>
           </div>
         </div>
       </div>
