--- a/secondarypage.html
+++ b/secondarypage.html
@@ -47,8 +47,8 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3 mt-5">Tampa</h1>
-                        <h4 class="mb-3 mt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
+                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
+                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
@@ -56,14 +56,14 @@
         </div>
         <div class="container-lg">
             <div class="row">
-                <div class="col m-3 p-3 bg-danger rounded text-center">
+                <div class="col m-3 p-3 rounded text-center testing">
                     <h1 class="text-decoration-underline">Restaurant</h1>
                     <img src="./assets/restfiller.webp" height="200px" width="200px">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
                 </div>
-                <div class="col m-3 p-3 bg-success rounded text-center">
+                <div class="col m-3 p-3 rounded text-center testing">
                     <h1 class="text-decoration-underline">Attraction</h1>
                     <img src="./assets/attrfiller.jpeg" height="200px" width="200px">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
