--- a/secondarypage.html
+++ b/secondarypage.html
@@ -38,7 +38,7 @@
         <!-- We could insert a logo image if we want or just use the name the name coudld be clickable for the home page if we don't want any links -->
         <a href="#" class="navbar-brand mb-0 h1"></a>
         <!-- Joe's work complete -->
-        <div class="p-3 m-5 text-center bg-image align-items-center justify-content-center" style="
+        <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
     background-image: url('./assets/pleasework.jpg');
     background-size: cover;
     background-position: 100%;
@@ -58,14 +58,14 @@
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center testing">
                     <h1 class="text-decoration-underline">Restaurant</h1>
-                    <img src="./assets/restfiller.webp" height="200px" width="200px">
+                    <img src="./assets/restfiller.webp" height="200px" width="300px" class="p-1">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center testing">
                     <h1 class="text-decoration-underline">Attraction</h1>
-                    <img src="./assets/attrfiller.jpeg" height="200px" width="200px">
+                    <img src="./assets/attrfiller.jpeg" height="200px" width="300px" class="p-1">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
