--- a/secondarypage.html
+++ b/secondarypage.html
@@ -17,7 +17,7 @@
         <!-- Joe's work with adding a nav bar -->
         <!-- I want to figure out how to make the nav bar transparent -->
         <header id="header">
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top navy">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Journeys-End Logo</a>
                     <!-- Links -->
@@ -56,14 +56,14 @@
         </div>
         <div class="container-lg">
             <div class="row">
-                <div class="col m-3 p-3 rounded text-center testing">
+                <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Restaurant</h1>
                     <img src="./assets/restfiller.webp" height="200px" width="300px" class="p-1">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <p><a href="#">TripAdvisor Link</a></p>
                     <button class="btn-lg">Try again</button>
                 </div>
-                <div class="col m-3 p-3 rounded text-center testing">
+                <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Attraction</h1>
                     <img src="./assets/attrfiller.jpeg" height="200px" width="300px" class="p-1">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
