--- a/secondarypage.html
+++ b/secondarypage.html
@@ -10,8 +10,9 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         >
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="./assets/css/secondarypage.css">
-        <title>Ask Eros Results</title>
+        <title>Date Night Results!</title>
     </head>
     <body>
         <!-- Joe's work with adding a nav bar -->
@@ -19,17 +20,17 @@
         <header id="header">
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top navy">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Journeys-End Logo</a>
+                    <a class="navbar-brand" href="index.html">Journeys-End Logo</a>
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#">Our Developers</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Link 2</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Toggle</a>
+                            <a class="nav-link" href="#">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
                         </li>
                     </ul>
                 </div>
