--- a/secondarypage.html
+++ b/secondarypage.html
@@ -20,7 +20,7 @@
         <header id="header">
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top navy">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Journeys-End Logo</a>
+                    <a class="navbar-brand" href="index.html">Journey's End <img src="./assets/datenight.jpg" height="60px" width="60px"></a>
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="#">Link 2</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
+                            <a class="nav-link" href="#" id="mode">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
                         </li>
                     </ul>
                 </div>
