--- a/secondarypage.html
+++ b/secondarypage.html
@@ -18,7 +18,7 @@
         <!-- Joe's work with adding a nav bar -->
         <!-- I want to figure out how to make the nav bar transparent -->
         <header id="header">
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top navy">
+            <nav class="navbar navbar-expand-sm sticky-top navy">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">Journey's End <img src="./assets/datenight.jpg" height="60px" width="60px"></a>
                     <!-- Links -->
