--- a/secondarypage.html
+++ b/secondarypage.html
@@ -49,8 +49,8 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
-                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
+                        <h1 class="mb-3 mt-5 pt-5 shadow">Tampa</h1>
+                        <h4 class="mb-3 mt-3 pt-3 shadow">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
