--- a/secondarypage.html
+++ b/secondarypage.html
@@ -20,7 +20,9 @@
         <header id="header">
             <nav class="navbar navbar-expand-sm sticky-top navy">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Journey's End <img src="./assets/datenight.jpg" height="60px" width="60px"></a>
+                    <a class="navbar-brand" href="index.html">Journey's End 
+                        <!-- <img src="./assets/datenight.jpg" height="60px" width="60px"> -->
+                    </a>
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -40,8 +42,9 @@
         <a href="#" class="navbar-brand mb-0 h1"></a>
         <!-- Joe's work complete -->
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
+        <div class="container-lg">
         <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
-    background-image: url('./assets/pleasework.jpg');
+    background-image: url('./assets/Tampa\ dark.png');
     background-size: cover;
     background-position: 100%;
     height: 400px;
@@ -49,12 +52,13 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3 mt-5 pt-5 shadow">Tampa</h1>
-                        <h4 class="mb-3 mt-3 pt-3 shadow">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
+                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
+                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!-- Containers for restaurant and attraction -->
         <div class="container-lg">
