added slider preview codes for .html , added slider card css
added slider preview cards and div sections appointed to it.

added css styling to change card size and position "thumbnails"

--- a/index.html
+++ b/index.html
@@ -103,8 +103,65 @@
           </div>
         </div>
     </div>
+    <!-- Slider Preview Cards -->
+    <div class="thumbnail">
+      <div class="card">
+        <img src="./assets/images/cityimages/philly1.jpg">
+        <div class="content">
+          <div class="title">
+            Philadelphia
+          </div>
+          <div class="des">
+            Brotherly Love
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/images/cityimages/philly2.jpg">
+        <div class="content">
+          <div class="title">
+            Philadelphia
+          </div>
+          <div class="des">
+            Brotherly Love
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/images/cityimages/miami2.jpg">
+        <div class="content">
+          <div class="title">
+            Philadelphia
+          </div>
+          <div class="des">
+            Brotherly Love
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/images/cityimages/pitts1.jpg">
+        <div class="content">
+          <div class="title">
+            Philadelphia
+          </div>
+          <div class="des">
+            Brotherly Love
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/images/cityimages/tampa2.jpg">
+        <div class="content">
+          <div class="title">
+            Philadelphia
+          </div>
+          <div class="des">
+            Brotherly Love
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
   
 
 
