--- a/secondarypage.html
+++ b/secondarypage.html
@@ -44,7 +44,7 @@
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
         <div class="container-lg">
         <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
-    background-image: url('./assets/tampa-dark.png');
+    background-image: url('./assets/images/tampa-dark.png');
     background-size: cover;
     background-position: 100%;
     height: 400px;
@@ -66,7 +66,7 @@
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Restaurant</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
                     <!-- Description ID for API will be retaurant-description -->
                     <p id="retaurant-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
@@ -77,7 +77,7 @@
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Attraction</h1>
                     <!-- Photo ID for API will be attraction-photo -->
-                    <img src="./assets/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="attraction-photo">
+                    <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="attraction-photo">
                     <!-- Description ID for API will be attraction-description -->
                     <p id="attraction-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
