--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- image 1 -->
     <div class="list">
       <div class="item">
-        <img src="./assets/images/cityimages/philly1.jpg">
+        <img src="./assets/images/philly-dark.png">
         <div class="content">
           <div class="state">Pennsylvania</div>
           <div class="city">Philadelphia</div>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/cityimages/tampa1.jpg">
+        <img src="./assets/images/tampa-dark.png">
         <div class="content">
           <div class="state">Florida</div>
           <div class="city">Tampa</div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/cityimages/miami2.jpg">
+        <img src="./assets/images/miami-dark1.png">
         <div class="content">
           <div class="state">Florida</div>
           <div class="city">Miami</div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/cityimages/pitts1.jpg">
+        <img src="./assets/images/pitt-dark.png">
         <div class="content">
           <div class="state">Pennsylvania</div>
           <div class="city">Pittsburgh</div>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/cityimages/atl1.jpg">
+        <img src="./assets/images/atlanta-dark.png">
         <div class="content">
           <div class="state">Georgia</div>
           <div class="city">Atlanta</div>
@@ -106,7 +106,7 @@
     <!-- Slider Preview Cards -->
     <div class="thumbnail">
       <div class="card">
-        <img src="./assets/images/cityimages/philly1.jpg">
+        <img src="./assets/images/philly-dark.png">
         <div class="content">
           <div class="title">
             Philadelphia
@@ -117,13 +117,13 @@
         </div>
       </div>
       <div class="card">
-        <img src="./assets/images/cityimages/philly2.jpg">
+        <img src="./assets/images/tampa-dark.png">
         <div class="content">
           <div class="title">
-            Philadelphia
+            Tampa
           </div>
           <div class="des">
-            Brotherly Love
+            Big Guava
           </div>
         </div>
       </div>
@@ -131,10 +131,10 @@
         <img src="./assets/images/cityimages/miami2.jpg">
         <div class="content">
           <div class="title">
-            Philadelphia
+            Miami
           </div>
           <div class="des">
-            Brotherly Love
+            Magic
           </div>
         </div>
       </div>
@@ -142,10 +142,10 @@
         <img src="./assets/images/cityimages/pitts1.jpg">
         <div class="content">
           <div class="title">
-            Philadelphia
+            Pittsburgh
           </div>
           <div class="des">
-            Brotherly Love
+            Steel City
           </div>
         </div>
       </div>
@@ -153,19 +153,16 @@
         <img src="./assets/images/cityimages/tampa2.jpg">
         <div class="content">
           <div class="title">
-            Philadelphia
+            Atlanta
           </div>
           <div class="des">
-            Brotherly Love
+            Hot'lanta
           </div>
         </div>
       </div>
     </div>
   </div>
   
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
