--- a/secondarypage.html
+++ b/secondarypage.html
@@ -26,7 +26,7 @@
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Our Developers</a>
+                            <a class="nav-link" href="developers.html">Our Developers</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Link 2</a>
