index.html changes mainpage.css changed
added slidearrow classes and buttons with ID to index.html

added slidearrow and button styling with hover effect to change buttons based on hover pseudo class.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
         </div>
       </div>
     </div>
+    <!-- slider movement arrows -->
+    <div class="slidearrow">
+      <button id="back"><</button>
+      <button id="forward">></button>
+    </div>
   </div>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
