--- a/developers.html
+++ b/developers.html
@@ -11,9 +11,75 @@
 >
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link rel="stylesheet" href="./assets/css/secondarypage.css">
+<link rel="stylesheet" href="./assets/css/developers.css">
     <title>Our Developers</title>
 </head>
 <body>
+    <header id="header">
+        <nav class="navbar navbar-expand-sm sticky-top navy">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Journey's End 
+                    <!-- <img src="./assets/datenight.jpg" height="60px" width="60px"> -->
+                </a>
+                <!-- Links -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="developers.html">Our Developers</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="mode">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <h1 class="text-center pt-5">Meet The Team</h1>
+    <div class="cards-wrapper">
+        <div class="card" style="width: 18rem;">
+            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Stephanie</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/sacarr91" class="btn">sacarr91</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Joseph</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/joegruff16" class="btn">joegruff16</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">David</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/drauf727" class="btn">Drauf727</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Zachary</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/ivionsters" class="btn">ivionsters</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Peter</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/peteCodes4U" class="btn">peteCodes4U</a>
+            </div>
+          </div>
+
+        </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
