--- a/developers.html
+++ b/developers.html
@@ -41,23 +41,23 @@
         <div class="card" style="width: 18rem;">
             <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Stephanie</h5>
+              <h5 class="card-title">Stephanie Carr</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://github.com/sacarr91" class="btn">sacarr91</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <img src="/assets/images/joseph.JPG" class="card-img-top" alt="Joseph Ruff">
             <div class="card-body">
-              <h5 class="card-title">Joseph</h5>
+              <h5 class="card-title">Joseph Ruff</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://github.com/joegruff16" class="btn">joegruff16</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <img src="/assets/images/davidr.JPG" class="card-img-top" alt="David Rauf">
             <div class="card-body">
-              <h5 class="card-title">David</h5>
+              <h5 class="card-title">David Rauf</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://github.com/drauf727" class="btn">Drauf727</a>
             </div>
@@ -65,7 +65,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Zachary</h5>
+              <h5 class="card-title">Zachary Polof</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://github.com/ivionsters" class="btn">ivionsters</a>
             </div>
@@ -73,7 +73,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/assets/images/atlanta-dark.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Peter</h5>
+              <h5 class="card-title">Peter Smith</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://github.com/peteCodes4U" class="btn">peteCodes4U</a>
             </div>
