--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./assets/images/cityimages/miami2.jpg">
+        <img src="./assets/images/miami-dark1.png">
         <div class="content">
           <div class="title">
             Miami
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./assets/images/cityimages/pitts1.jpg">
+        <img src="./assets/images/pitt-dark.png">
         <div class="content">
           <div class="title">
             Pittsburgh
@@ -150,7 +150,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./assets/images/cityimages/tampa2.jpg">
+        <img src="./assets/images/atlanta-dark.png">
         <div class="content">
           <div class="title">
             Atlanta
@@ -163,8 +163,8 @@
     </div>
     <!-- slider movement arrows -->
     <div class="slidearrow">
-      <button id="back"><</button>
-      <button id="forward">></button>
+      <button id="back"><-</button>
+      <button id="forward">-></button>
     </div>
   </div>
   
