--- a/developers.html
+++ b/developers.html
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <img src="./assets/images/zach.jpg" class="card-img-top" alt="Zachary Polof">
             <div class="card-body">
               <h5 class="card-title">Zachary Polof</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
